# provable_solving

./: .gitignore  hardhat.config.ts  package-lock.json  package.json
auctioneer-solver/: .gitignore  Cargo.toml
auctioneer-solver/src/: auctioneer.rs  consts.rs  error.rs  lib.rs  main.rs  solver.rs  types.rs  utils.rs
auctioneer-solver/src/abi/: auctioneer_challenge.json  uniswap_v2_router_1.json  uniswap_v3_router_1.json  usdc.json
axiom-repl-starter/: package.json
axiom-repl-starter/src/app/: page.tsx
axiom-repl-starter/src/components/axiom/worker/: circuit.ts  index.ts
contracts/: Auctioneer.sol  AuctioneerChallenge.sol  AxiomV2Client.sol
scripts/: deploy.ts
typechain-types/: AuctioneerChallenge.ts  AxiomV2Client.ts  hardhat.d.ts  index.ts
typechain-types/factories/: AuctioneerChallenge__factory.ts  AxiomV2Client__factory.ts  ECDSA__factory.ts  Lock__factory.ts  index.ts
typechain-types/factories/interfaces/: IAxiomV2Client__factory.ts  index.ts
typechain-types/interfaces/: IAxiomV2Client.ts  index.ts
ui/: circuit.ts
