[package]
name = "auctioneer-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.2"
alloy-sol-types = "0.2"
anyhow = "1.0.7"
async-trait = "0.1.74"
dotenv = "0.15.0"
ethers = "2.0.10"
hashbrown = { version = "0.14.2", features = ["serde"] }
jsonrpsee = { version = "0.20", features = ["server", "macros", "client"] }
log = "0.4.20"
parking_lot = "0.12.1"
reqwest = "0.11.22"
serde = "1"
serde_json = "1.0.108"
tokio = { version =  "1.8", features = ["signal", "rt-multi-thread", "macros", "test-util"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "example"
path = "src/bin/example.rs"
